--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             gap: 5px; 
             height: 70%; 
             /* Faz a 14 ser mais larga que as outras da mesma coluna */
-             .card[data-id="32002"] {
+             .card[data-id="32002"] 
     flex: 1.5; /* Ela cresce mais que a 12 e a 13 no sentido vertical */
     min-width: 120%; /* Ela "pula" um pouco para fora se houver espaço ou ganha peso visual */
     background-color:ffffff;
     z-index: 1;
-}
+
             
         }
 
