--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <header>
         <div class="info-header">
-            <h1>Spinj</h1>
+            <h1>Status Injeção</h1>
             <div id="status-resumo" class="status-resumo">Carregando...</div>
         </div>
         <div style="display: flex;">
